Vienna ChangeLog File
=====================

As you release new builds, update this file with details of the changes in each build. The
most recent build should be at the top of this file.

Thanks!

2.2.0.2201
----------
- UI improvements contributed by Philipp Antoni.
- Switched to polished metal style.
- Added Russian localization. (Thanks to Taras "sacrat" Brizitsky).

2.2.0.2200
----------
- Added ability to drop OPML files onto Vienna's dock icon.
- Added support for RSS/Atom enclosures.
- Add conditional support in templates.
- Overhauled UI.
- Added new standard style.
- Added more built-in styles.
- Command + T now opens new tab.
- Accept web pages as subscription URLs and parse to extract the feed.
- Show RSS button in browser if the web page links to an RSS feed. Clicking the button subscribes to that feed.
- New tab bar control. (Thanks to Evan Schoenberg).
- Add option to add Vienna to the system status bar.
- Added Basque localization. (Thanks to Aitor Zubizarreta).
- If Vienna doesn't handle the URL scheme (e.g., itms), open the URL with the default application for its scheme.
- Allow refreshing of unsubscribed feeds if they are specifically selected. (Thanks to ytrewq1 for submitting a patch.)
- Updated to SQLite 3.3.17.
- Change exported file format to UTF8. (Thanks to Kiyu Horiuti).
- Added toolbar and moved buttons to toolbar. (Thanks to David Kocher for the prototyping).
- Added support for toggle status bar and moved progress indicator to toolbar.
- Add toolbar button to empty the trash.
- Added flagged article filter.
- Refresh all subscriptions now refreshes in the folder list sorted order.

2.1.2.2110
----------
- Fixed bug: empty trash warning did not reappear after unhiding Vienna.
- Changed button tooltip to match behavior.
- New and nicer toolbar icons made by Davide Casali (Folletto).
- Fixed bug: move articles to Trash preference was counting back to beginning of day rather than by 24 hours.