@@ -57,9 +57,12 @@
 #define MA_FFlag_NeedCredentials	2
 #define MA_FFlag_Error				4
 #define MA_FFlag_Unsubscribed		8
+#define MA_FFlag_Updating			16
 
 // Macros for testing folder flags
 #define IsUnsubscribed(f)		([(f) flags] & MA_FFlag_Unsubscribed)
+#define IsUpdating(f)			([(f) nonPersistedFlags] & MA_FFlag_Updating)
+#define IsError(f)				([(f) nonPersistedFlags] & MA_FFlag_Error)
 
 @interface Folder : NSObject {
 	int itemId;
